Fix horizontal scrolls
[need build client]

--- a/src/styles/adaptive.scss
+++ b/src/styles/adaptive.scss
@@ -345,7 +345,7 @@
 
     .consultation__image {
       .consultation__image-img {
-        max-width: 500px;
+        max-width: 100%;
         height: 100%;
         object-fit: cover;
       }
@@ -974,12 +974,12 @@
 
       #infoBlock4 {
         bottom: 150px;
-        right: -15px;
+        right: 0;
       }
 
       #infoBlock5 {
         top: 40px;
-        right: -30px;
+        right: -5px;
       }
     }
   }
@@ -1025,12 +1025,12 @@
 
       #infoBlock4 {
         bottom: 150px;
-        right: -15px;
+        right: 0;
       }
 
       #infoBlock5 {
         top: 40px;
-        right: -30px;
+        right: -5px;
       }
     }
   }
@@ -1507,9 +1507,8 @@
     }
 
     .consultation__image {
-      //display: none;
       .consultation__image-img {
-        max-width: 250px;
+        max-width: 100%;
         height: 100%;
         object-fit: cover;
       }
